--- a/_posts/2015-8-30-Week-1.md
+++ b/_posts/2015-8-30-Week-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: First week in OOP
+title: Week 2!
 ---
 
 Here we go! This is my first blog post for this class. So far, the dynamic seems like one that is very different from previous cs classes that I've taken. Most of the ones I've taken were a bit smaller than the size of this class, and didn't have any attendance metrics. More importantly, all in class questions were done on a volunteer basis, so there wasn't any direct motivation to pay attention in class, except for of course learning. It's interesting, usually I would make some statement about how we are all adults and don't need attendance/randomly being called on, but I certainly don't have the best work ethic, and an environment like this will definitely make my pay significantly more attention and show up more often. 
